--- a/templates/bashrc.j2
+++ b/templates/bashrc.j2
@@ -5,5 +5,4 @@ case $- in
       *) return;;
 esac
 # Colourful prompt with host IP, username, and current directory
-IP="$(hostname -I | awk '{print $1}')"
-PS1="\[\e[36m\]${IP}\[\e[0m\] \[\e[32m\]\u\[\e[0m\] \[\e[34m\]\w\[\e[0m\]\$ "
+PS1="\[\e[36m\]$(hostname -I | awk '{print $1}')\[\e[0m\] \[\e[32m\]\u\[\e[0m\] \[\e[34m\]\w\[\e[0m\]\$ "
