Enable prompt variable expansion (#13)

--- a/templates/bashrc.j2
+++ b/templates/bashrc.j2
@@ -4,5 +4,7 @@ case $- in
     *i*) ;;
       *) return;;
 esac
+# Ensure prompt variables are expanded
+shopt -s promptvars
 # Colourful prompt with host IP, username, and current directory
 PS1='\\[\\e[36m\\]$(hostname -I | cut -d" " -f1)\\[\\e[0m\\] \\[\\e[32m\\]\\u\\[\\e[0m\\] \\[\\e[34m\\]\\w\\[\\e[0m\\]\\$ '
