Add bashrc aliases and user home playbook

--- a/templates/bashrc.j2
+++ b/templates/bashrc.j2
@@ -8,3 +8,7 @@ esac
 shopt -s promptvars
 # Colourful prompt with host IP, username, and current directory
 PS1='\[\e[36m\]$(hostname -I | cut -d" " -f1)\[\e[0m\] \[\e[32m\]\u\[\e[0m\] \[\e[34m\]\w\[\e[0m\]\$ '
+
+# Convenience aliases for running Ansible playbooks
+alias admin='ansible-playbook -i inventory/hosts.ini dto_user.yml'
+alias prox='ansible-playbook -i inventory/hosts.ini dto_proxmox.yml'
