Add root bash prompt deployment for Proxmox

--- a/templates/bashrc.j2
+++ b/templates/bashrc.j2
@@ -1,4 +1,4 @@
-# .bashrc for ironscope user (Ansible managed)
+# .bashrc with colorful prompt (Ansible managed)
 # If not running interactively, exit
 case $- in
     *i*) ;;
