--- a/templates/proxinvoke/192.168.188.101.yml.j2
+++ b/templates/proxinvoke/192.168.188.101.yml.j2
@@ -8,7 +8,7 @@
 vmid: 9000
 
 # Anzeigename der zu erstellenden VM.
-name: dto-testvm
+name: autobotvm
 
 # IP-Adresse oder Hostname des Proxmox-Knotens, auf dem die VM erstellt wird.
 target_host: 192.168.188.101
@@ -17,13 +17,13 @@ target_host: 192.168.188.101
 storage: dto-lvmthin
 
 # Größe der Systemfestplatte.
-disk_size: 10G
+disk_size: 100G
 
 # Anzahl der vCPUs.
-cores: 2
+cores: 4
 
 # Arbeitsspeicher der VM in MiB.
-memory: 2048
+memory: 5000
 
 # Netzwerkdefinitionen. Weitere Einträge können ergänzt werden.
 networks:
