refactor proxstorage to allocate full capacity

--- a/templates/proxinvoke/192.168.188.101.yml.j2
+++ b/templates/proxinvoke/192.168.188.101.yml.j2
@@ -16,8 +16,8 @@ target_host: 192.168.188.101
 # Name des vorhandenen Proxmox-Storages für die Systemfestplatte.
 storage: dto-lvmthin
 
-# Größe der Systemfestplatte.
-disk_size: 100G
+# Größe der Systemfestplatte in GiB.
+disk_size: 100
 
 # Anzahl der vCPUs.
 cores: 4
