Support SMBIOS settings for Proxmox VM

--- a/templates/proxinvoke/192.168.188.101.yml.j2
+++ b/templates/proxinvoke/192.168.188.101.yml.j2
@@ -32,5 +32,5 @@ networks:
 # SMBIOS (type1) configuration for the VM.
 smbios1:
   uuid: 2c269505-717e-490b-a1cb-a089cc71e9c8
-  manufacturer: "Dell Inc."
-  product: "PowerEdge R730"
+  manufacturer: Dell Inc.
+  product: PowerEdge R730
